--- a/Computing/cluster/cluster_construction_virtual/2.configure_controller.md
+++ b/Computing/cluster/cluster_construction_virtual/2.configure_controller.md
@@ -22,7 +22,8 @@ controllerはクラスタのネットワークにおいて
 
 ## 準備
 1. controllerを起動
-2. ホストからworker@192.168.1.200でログイン．パスワードはworker
+2. ホストからworker@192.168.1.200でssh接続．パスワードはworker
+    - ```ssh-copy-id -i cluster/cluster_construction_virtual/src/id_ed25519.pub worker@192.168.1.200```で公開鍵をcontrollerに送り，公開鍵認証しても良い
 3. エディタのインストール． ```sudo apt update && sudo apt install nano```
 
 ## ルーター機能インストール
@@ -35,7 +36,7 @@ controllerはクラスタのネットワークにおいて
 追加されたディスクを別々にマウントし，NSF機能によって計算ノードと共有する．
 1. ディスクにパーティションを作成するプログラム```parted```をインストール```sudo apt install parted```
 
-2. 追加されたディスクを/share，/archiveとしてマウント
+2. 追加されたディスクを```/cluster/share, /cluster/archive```としてマウント  
     1.  ```lsblk```コマンドで追加したディスクの名前を見られる．通常ハードディスクを追加するとsdbとかsdcという名前になる．
     2. ```sudo parted -s /dev/sdb mklabel gpt mkpart primary ext4 0% 100%``` によってディスクにパーティションを作成する準備をする． 
     3. ```sudo mkfs.ext4 /dev/sdb1```によってext4でパーティションをフォーマット
@@ -43,20 +44,22 @@ controllerはクラスタのネットワークにおいて
 
     5. マウント先のディレクトリを作成  
     ```
-    sudo mkdir /archive && sudo chmod 777 -R /archive && sudo chown -R nobody:nogroup /archive
-    sudo mkdir /share && sudo chmod 777 -R /share && sudo chown -R nobody:nogroup /share
+    sudo mkdir -p /cluster/archive && sudo chmod 777 -R /cluster/archive && sudo chown -R nobody:nogroup /cluster/archive
+    sudo mkdir -p /cluster/share && sudo chmod 777 -R /cluster/share && sudo chown -R nobody:nogroup /cluster/share
     ```
     6. 作成されたパーティションのuuidを取得  
     ```sudo blkid -o list```を実行することで今作成したパーティションに割り振られるユニークなidであるUUIDを確認する．例えば画像では/dev/sbd1のuuidは```b4cb6638-24d9-42f8-abbb-18a7eb05ebf8```
     ![](figures/ss-blkid.png)
-    7. uuidをもとにパーティションをマウント  
-    以下を```/etc/fstab```に追記することで，永続的にそれぞれのパーティションを/archive, /shareにマウントできる．
+
+    8. uuidをもとにパーティションをマウント  
+    以下を```/etc/fstab```に追記することで，永続的にそれぞれのパーティションを```/cluster/share, /cluster/archive```にマウントできる．
     ```
-    /dev/disk/by-uuid/b4cb6638-24d9-42f8-abbb-18a7eb05ebf8 /archive ext4 defaults 0 1
-    /dev/disk/by-uuid/6d719ce4-71d1-4abd-aeb4-9a5f20dd0d94 /share ext4 defaults 0 1
+    /dev/disk/by-uuid/b4cb6638-24d9-42f8-abbb-18a7eb05ebf8 /cluster/archive ext4 defaults 0 1
+    /dev/disk/by-uuid/6d719ce4-71d1-4abd-aeb4-9a5f20dd0d94 /cluster/share ext4 defaults 0 1
     ```
 
-    ```sudo mount -a```によって編集内容を反映する．
+    9. ```sudo mount -a```によって編集内容を反映する．
+
 
 3. NFS設定
     1. NSFサーバーインストール  
@@ -64,8 +67,8 @@ controllerはクラスタのネットワークにおいて
     2. NSFサーバー設定
     ```/etc/exports```に以下を追記
     ```
-    /archive 200.0.0.0/16(rw,async,root_squash,no_subtree_check) 192.168.1.0/24(rw,async,root_squash,no_subtree_check)
-    /share 200.0.0.0/16(rw,async,root_squash,no_subtree_check) 192.168.1.0/24(rw,async,root_squash,no_subtree_check)
+    /cluster/archive 200.0.0.0/16(rw,async,root_squash,no_subtree_check) 192.168.1.0/24(rw,async,root_squash,no_subtree_check)
+    /cluster/share 200.0.0.0/16(rw,async,root_squash,no_subtree_check) 192.168.1.0/24(rw,async,root_squash,no_subtree_check)
     ```
     3. 設定を反映
     ```
@@ -88,6 +91,14 @@ sudo systemctl enable --now apt-cacher-ng
 3. https透過
 ```/etc/apt-cacher-ng/acng.conf```に  
 ```PassThroughPattern: .*``` を追記
+
+4. クライアント設定
+```/etc/apt/apt.conf.d/02proxy```に
+```
+Acquire::http::Proxy "http://127.0.0.1:3142/";
+Acquire::https::Proxy "http://127.0.0.1:3142/";
+```
+を追記
 
 ## ルーター・ファイヤーウォール設定
 controllerのファイヤーウォールに求められるふるまいは以下の通り．
@@ -157,8 +168,9 @@ ufw allow in on enp0s8 from 200.0.0.0/16 to any
 ```sudo systemctl enable ufw```で```ufw```を再起動時に起動するようにする．  
 ```sudo ufw enable```で```ufw```を今のセッションで起動する．
 
-**この状態でsshからログアウトすると，epyc1からしかcontrollerにssh接続できなくなる．その場合はvirtualboxのコンソールから```sudo ufw disable```でufwを一旦無効化するか，epyc1をインストールしてそれを踏み台にしてcontrollerにssh接続する**
+**この状態でsshからログアウトすると，以後epyc1からしかcontrollerにssh接続できなくなる．その場合はvirtualboxのコンソールから```sudo ufw disable```でufwを一旦無効化するか，epyc1をインストールしてそれを踏み台にしてcontrollerにssh接続する**
 
+**2. configure_workers**を実行
 
 ## 専属ノードとのssh設定
 epyc1からcontrollerへ，controllerから200.0.0.0/16へのssh接続はsrc/id_ed25519を使う．epyc1のユーザーは皆workerとしてcontrollerにssh接続する．
@@ -188,3 +200,33 @@ Host 200.0.100.1
 
 **(読まなくても良い)** この設定は200.0.100.1の接続相手が前と異なると警告を出す機能を無効化する．自動インストール([詳細](./appendix1.autoinstaller.md))では，新たなノードにubuntuをインストールする時は200.0.100.1をipアドレスとして与え，その後の詳細設定で適切なipアドレスに再設定する．そのため，クラスタ構築の過程では200.0.100.1は入れ替わり，先述の警告が必ず生じて不便なので，無効化する．  
 この警告機能自体は，いつも接続しているデバイスが攻撃者のなりすましにすりかわっているときに接続を回避できるため有用であり，安全と分かっている時以外は有効にすべきである．
+
+
+### shutdownの安全化
+controllerをうっかりシャットダウンするとわりと大変なことになる．```shutdown```の変わりに本当にshutdownするか確認してからシャットダウンする```/usr/local/bin/safe-shtudown```を作成する．
+```
+#!/bin/bash
+
+echo "This node is the controller node of the cluster."
+echo "To really shutdown, input 'shutdown-confirm'"
+read -r confirmation
+
+if [ "$confirmation" == "shutdown-confirm" ]; then
+    echo "シャットダウンを実行します..."
+    sudo shutdown "$@"
+else
+    echo "shutdown is canceled"
+fi
+```
+
+- 実行権限を付与  
+```sudo chmod +x /usr/local/bin/safe-shtudown```
+- ```shutdown```と打つと```safe-shutdown```を実行させるためのエイリアスを```.bashrc```に追記
+```
+
+# sudoコマンドでaliasを使えるようにする
+# https://qiita.com/homoluctus/items/ba1a6d03df85e65fc85a
+alias sudo = 'sudo ' 
+alias shutdown='/usr/local/bin/safe-shutdown'
+```
+
