--- a/Computing/cluster/cluster_construction_virtual/4.configure_slurm.md
+++ b/Computing/cluster/cluster_construction_virtual/4.configure_slurm.md
@@ -13,7 +13,7 @@ sudo echo slurm-wlm hold | sudo dpkg --set-selections
 sudo mkdir -p /var/log/slurm # ログを入れるディレクトリを作成
 sudo chown -R slurm:slurm /var/log/slurm # によってslurmがアクセスできるようにする
 sudo mkdir -p /var/spool/slurmctld # ほとんど同様
-sudo chmod -R slurm:slurm /var/spool/slurmctld
+sudo chown -R slurm:slurm /var/spool/slurmctld
 ```
 
 ## controllerの設定
@@ -80,7 +80,7 @@ SlurmdLogFile=/var/log/slurm/slurmd.log
 # COMPUTE NODES
 NodeName=controller CPUs=2 Sockets=1 CoresPerSocket=2 ThreadsPerCore=1 State=UNKNOWN
 NodeName=epyc1 CPUs=3 Sockets=1 CoresPerSocket=3 ThreadsPerCore=1 State=UNKNOWN
-NodeName=acpu1-[1-3] CPUs=1 Sockets=1 CoresPerSocket=1 ThreadsPerCore=1 State=UNKNOWN
+NodeName=acpu1-[1-3] CPUs=2 Sockets=1 CoresPerSocket=2 ThreadsPerCore=1 State=UNKNOWN
 # acpu1-[1-3]はacpu1-1, acpu1-2, acpu1-3をまとめて書く方法
 #NodeName=acpu1-1 CPUs=1 Sockets=1 CoresPerSocket=1 ThreadsPerCore=1 State=UNKNOWN
 #NodeName=acpu1-2 CPUs=1 Sockets=1 CoresPerSocket=1 ThreadsPerCore=1 State=UNKNOWN
@@ -91,13 +91,11 @@ PartitionName=exclusives Nodes=controller,acpu1-[1-3] OverSubscribe=YES MaxTime=
 
 epyc1ノードは4coresの設定で作成したとかのことを踏まえて更に編集したところ．
 
-
-
 ## 共通設定
 - キーの共有  
-slurmのノード間の認証のために全てのノードで```src/slurm.key```を```/etc/slurm/```以下に配置する．```src/slurm.key```を```/share/installation```に配置している場合
+slurmのノード間の認証のために全てのノードで```src/slurm.key```を```/etc/slurm/```以下に配置する．```src/slurm.key```を```/cluster/share/installation```に配置している場合
 ```
-sudo cp /share/installation/slurm.key /etc/slurm
+sudo cp /cluster/share/installation/slurm.key /etc/slurm
 
 # さらにパーミッションを調整
 sudo chown slurm:slurm /etc/slurm/slurm.key 
@@ -139,3 +137,5 @@ controllerのslurm.confファイルを計算ノードに読ませるため，す
 
 失敗する場合，```sudo systemctl status slurmctld```でエラーの詳細が見える．パーミッションのエラーや作成すべきディレクトリを作成し忘れることで生じるエラーが多い．
 
+### worker
+```sudo systemctl restart slurmd```
